--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,62 @@ footer a {
   color: var(--primary);
 }
 
+.footer-buttons {
+  margin-top: 10px;
+}
+
+.footer-buttons button {
+  padding: 8px 10px;
+  margin-right: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  border-radius: 8px;
+}
+
+.footer__theme1 {
+  color: #ff580a;
+  background-color: transparent;
+  border: 1px solid #a04800;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__theme1:hover {
+  background-color: #f3bf13;
+  color: #fff;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__theme2 {
+  color: #ff5555;
+  background-color: transparent;
+  border: 1px solid #ff5555;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__theme2:hover {
+  background-color: #ff5555;
+  color: #fff;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__theme3 {
+  color: #0917dd;
+  background-color: transparent;
+  border: 1px solid #10dbff;
+  transition: all 0.5s ease 0s;
+}
+
+.footer__theme3:hover {
+  background-color: #0833c4;
+  color: #fff;
+  transition: all 0.5s ease 0s;
+}
+
+.active-theme {
+  background-color: #ffa807;
+  color: white;
+}
+
 /* Business Card Flip Effect */
 .business-card {
   width: 300px;
@@ -339,12 +395,12 @@ footer a {
 .business-card-front {
   background-color: #fff;
   color: #333;
-  border: 2px solid #007bff;
+  border: 2px solid #f1b50f;
 }
 
 /* Back Side */
 .business-card-back {
-  background-color: #007bff;
+  background-color: #ffbb00;
   color: white;
   transform: rotateY(180deg);
 }
